<resources>
    <string name="app_name">Catatan Ramadhan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Silahkan,</string>
    <string name="next_prayer">Sholat selanjutnya</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="magrib">Magrib</string>
    <string name="isya">Isya</string>
    <string name="time_prayer">05:05</string>
    <string name="left_time">-01:01:10 memasuki Subuh</string>
    <string name="date">25 Juli 2020</string>
    <string name="date_hijr">5 Dhuʻl-Hijjah 1441H</string>
    <string name="schedule">Jadwal</string>
    <string name="prayer">Doa</string>
    <string name="note">Catatan</string>
    <string name="profile">Profil</string>

    <string name="rationale_location">This app needs access to your location to know where you are.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login untuk masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="signin">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in.</string>
    <string name="forgot_password">Forgot \nPassword</string>
    <string name="message_forget_password">To reset your password, please enter your email, press the button and check your email to follow the instruction</string>
    <string name="send_request">send request</string>
    <string name="prayer_detail">Prayer Detail</string>
    <string name="back">Back</string>

    <string name="error_message_field">Field cant be empty</string>
    <string name="login_required">Login is required to use this feature</string>
    <string name="date_label">Date</string>
    <string name="juz">Juz</string>
    <string name="surah">Surah</string>
    <string name="ayat">Ayat</string>
    <string name="fasting">Puasa</string>
    <string name="sholat">Sholat</string>
    <string name="mengaji">Mengaji</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>

    <string-array name="list_surah">
        <item>Al-Fatihah</item>
        <item>Al-Baqarah</item>
        <item>Ali Imran</item>
        <item>An-Nisa</item>
        <item>Al-Ma\'idah</item>
        <item>Al-An\'am</item>
        <item>Al-A\'raf</item>
        <item>Al-Anfal</item>
        <item>At-Taubah</item>
        <item>Yunus</item>
        <item>Hud</item>
        <item>Yusuf</item>
        <item>Ar-Ra\'d</item>
        <item>Ibrahim</item>
        <item>Al-Hijr</item>
        <item>An-Nahl</item>
        <item>Al-Isra</item>
        <item>Al-Kahf</item>
        <item>Maryam</item>
        <item>Ta Ha</item>
        <item>Al-Anbiya</item>
        <item>Al-Hajj</item>
        <item>Al-Mu\'minun</item>
        <item>An-Nur</item>
        <item>Al-Furqan</item>
        <item>Asy-Syu\'ara</item>
        <item>An-Naml</item>
        <item>Al-Qasas</item>
        <item>Al-\'Ankabut</item>
        <item>Ar-Rum</item>
        <item>Luqman</item>
        <item>As-Sajdah</item>
        <item>Al-Ahzab</item>
        <item>Saba</item>
        <item>Fatir</item>
        <item>Ya Sin</item>
        <item>As-Saffat</item>
        <item>Sad</item>
        <item>Az-Zumar</item>
        <item>Al-Mu\'min</item>
        <item>Fussilat</item>
        <item>Asy-Syura</item>
        <item>Az-Zukhruf</item>
        <item>Ad-Dukhan</item>
        <item>Al-Jasiyah</item>
        <item>Al-Ahqaf</item>
        <item>Muhammad</item>
        <item>Al-Fath</item>
        <item>Al-Hujurat</item>
        <item>Qaf</item>
        <item>Az-Zariyat</item>
        <item>At-Tur</item>
        <item>An-Najm</item>
        <item>Al-Qamar</item>
        <item>Ar-Rahman</item>
        <item>Al-Waqi\'ah</item>
        <item>Al-Hadid</item>
        <item>Al-Mujadilah</item>
        <item>Al-Hasyr</item>
        <item>Al-Mumtahanah</item>
        <item>As-Saff</item>
        <item>Al-Jumu\'ah</item>
        <item>Al-Munafiqun</item>
        <item>At-Tagabun</item>
        <item>At-Talaq</item>
        <item>At-Tahrim</item>
        <item>Al-Mulk</item>
        <item>Al-Qalam</item>
        <item>Al-Haqqah</item>
        <item>Al-Ma\'arij</item>
        <item>Nuh</item>
        <item>Al-Jinn</item>
        <item>Al-Muzzammil</item>
        <item>Al-Muddassir</item>
        <item>Al-Qiyamah</item>
        <item>Al-Insan</item>
        <item>Al-Mursalat</item>
        <item>An-Naba</item>
        <item>An-Nazi\'at</item>
        <item>\'Abasa</item>
        <item>At-Takwir</item>
        <item>Al-Infitar</item>
        <item>Al-Tatfif</item>
        <item>Al-Insyiqaq</item>
        <item>Al-Buruj</item>
        <item>At-Tariq</item>
        <item>Al-A\'la</item>
        <item>Al-Ghasyiyah</item>
        <item>Al-Fajr</item>
        <item>Al-Balad</item>
        <item>Asy-Syams</item>
        <item>Al-Lail</item>
        <item>Ad-Duha</item>
        <item>Al-Insyirah</item>
        <item>At-Tin</item>
        <item>Al-Alaq</item>
        <item>Al-Qadr</item>
        <item>Al-Bayyinah</item>
        <item>Az-Zalzalah</item>
        <item>Al-Adiyat</item>
        <item>Al-Qari\'ah</item>
        <item>At-Takasur</item>
        <item>Al-Asr</item>
        <item>Al-Humazah</item>
        <item>Al-Fil</item>
        <item>Quraisy</item>
        <item>Al-Ma\'un</item>
        <item>Al-Kausar</item>
        <item>Al-Kafirun</item>
        <item>An-Nasr</item>
        <item>Al-Lahab</item>
        <item>Al-Ikhlas</item>
        <item>Al-Falaq</item>
        <item>An-Nas</item>
    </string-array>

</resources>